# opensearch-protobufs

./: .bazelrc  BUILD.bazel  CHANGELOG.md  Dockerfile  WORKSPACE
protos/schemas/: BUILD.bazel  common.proto  document.proto  search.proto
protos/services/: BUILD.bazel
