# protos/schemas/BUILD.bazel
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_java//java:defs.bzl", "java_proto_library")
load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "common_proto",
    srcs = ["common.proto"],
    deps = [
        "@com_google_protobuf//:struct_proto",
    ],
)

proto_library(
    name = "document_proto",
    srcs = ["document.proto"],
    deps = [
        ":common_proto",
        "@com_google_protobuf//:struct_proto",
    ],
)

proto_library(
    name = "search_proto",
    srcs = ["search.proto"],
    deps = [
        ":common_proto",
        "@com_google_protobuf//:struct_proto",
        ],
)

# Java proto libraries
java_proto_library(
    name = "common_java_proto",
    deps = [":common_proto"],
)

java_proto_library(
    name = "document_java_proto",
    deps = [":document_proto"],
)

java_proto_library(
    name = "search_java_proto",
    deps = [":search_proto"],
)

"""
Python schema libraries
"""

py_proto_library(
    name = "common_proto_py",
    default_runtime = "@com_google_protobuf//:protobuf_python",
    protoc = "@com_google_protobuf//:protoc",
    srcs = ["common.proto"],
)

py_proto_library(
    name = "document_proto_py",
    default_runtime = "@com_google_protobuf//:protobuf_python",
    protoc = "@com_google_protobuf//:protoc",
    srcs = ["document.proto"],
    deps = [":common_proto_py"],
)

py_proto_library(
    name = "search_proto_py",
    default_runtime = "@com_google_protobuf//:protobuf_python",
    protoc = "@com_google_protobuf//:protoc",
    srcs = ["search.proto"],
    deps = [ ":common_proto_py"],
)